--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-parent></app-parent>
-<h1>child</h1>
-<app-child></app-child>
+<h1>{{title}}</h1>
+<app-heroes></app-heroes>
+<app-messages></app-messages>
 <router-outlet></router-outlet>
